# todo-app

./: docker-compose.yaml  pyproject.toml
api/cruds/: task.py
api/routers/: task.py
api/schemas/: task.py
tests/: test_main.py
